use go swagger to generate client from generated swagger docs, add blackbox that implements bdd using godog (cucumber) to run test cases
