# rula/docs/swagger.yaml
@@ -129,12 +129,16 @@ paths:
       produces:
       - application/json
       responses:
-        "200":
-          description: OK
+        "201":
+          description: Created
           schema:
             $ref: '#/definitions/models.Response'
         "400":
           description: Bad Request
+          schema:
+            $ref: '#/definitions/models.Response'
+        "409":
+          description: Conflict
           schema:
             $ref: '#/definitions/models.Response'
       summary: Create new User
